<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <!-- Champ pour l'email -->
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <!-- Champ pour le nom d'utilisateur -->
    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:autofillHints="username"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <!-- Champ pour le mot de passe -->
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="@color/black"/>

    <!-- Bouton de création de compte -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/blue"
        android:textColor="@color/white"/>
</LinearLayout>
